--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [vagrant]
-ansible-awx.dev ansible_host=192.168.33.11
-ansible-lab.dev ansible_host=192.168.33.12
+ansible-awx ansible_host=192.168.33.11
+ansible-lab ansible_host=192.168.33.12
 
 [vagrant:vars]
 ansible_connection=ssh 
